# PlantE

./: .clang-format.yaml  .clang-tidy.yaml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALLATION_GUIDES.md  Makefile  README.md  vcpkg.json
.github/workflows/: code_format.yaml
A4-APS-main/: CONTRIBUTING.md  Makefile  README.md  tidy.sh
A4-APS-main/src/: login.hpp  main.cpp
nosso projeto/: texto.txt
src/: globais.cpp  globais.hpp  login.cpp  login.hpp  main.cpp  plant&.hpp  roteador.cpp  roteador.hpp
src/dominio/feed/entidades/: comentario.cpp  comentario.hpp  comentavel.cpp  comentavel.hpp  postagem.cpp  postagem.hpp
src/dominio/identidade/dao/: administrador_dao.cpp  moderador_dao.cpp  usuario_dao.cpp  usuarios_dao.hpp
src/dominio/identidade/dvo/: administrador_dvo.cpp  moderador_dvo.cpp  usuario_dvo.cpp
src/dominio/identidade/entidades/: administrador.cpp  moderador.cpp  usuario.cpp  usuario.hpp
src/dominio/identidade/enums/: cargo.hpp
src/dominio/identidade/gerentes/: administrador_gerente.cpp  moderador_gerente.cpp  usuario_gerente.cpp
src/dominio/moderacao/dao/: denuncias_dao.hpp  denunciavel_dao.hpp
src/dominio/moderacao/entidades/: denuncia.cpp  denuncia.hpp  denunciavel.cpp  denunciavel.hpp
src/dominio/moderacao/enum/: estado_da_denuncia.hpp  motivo_da_denuncia.hpp  tipo_do_denunciavel.hpp
src/dominio/moderacao/gerentes/: gerente_de_daos_de_denunciaveis.cpp  gerente_de_daos_de_denunciaveis.hpp  gerente_de_denuncias.cpp  (+1 more)
src/util/: datas.cpp  datas.hpp  id.cpp  id.hpp  strings.cpp  strings.hpp
usuario/: teste.cpp
(+59 files in other folders)
